[package]
name = "portsmith"
version = "0.1.0"
edition = "2021"
authors = ["tiago.costa.sousa@proton.me"]
description = "A simple port health checker for gluetun forwarded ports in qbittorrent."
license = "GPL-3.0-only"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
port_check = "0.2.1"
ureq = { version = "2.12.1", features = ["json"] }
