[package]
name = "portwatch"
version = "0.1.0"
edition = "2021"
authors = ["tiago.costa.sousa@proton.me"]
description = "Simple Rust application that syncs qBittorrent's listening port with Gluetun's forwarded port and resets it if inaccessible."
license = "GPL-3.0-only"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
port_check = "0.2.1"
ureq = { version = "2.12.1", features = ["json"] }
